Keegans, add new category and item page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".add_category"
+            android:exported="false" />
+        <activity
+            android:name=".add_new"
+            android:exported="false" />
     </application>
 
 </manifest>
