:lipstick: Make this pretty and functioning
Need to finish off the functionality but right now its going well.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,9 @@
         <activity
             android:name=".activities.add_new"
             android:exported="false" />
+        <activity
+            android:name=".activities.AddItem"
+            android:exported="false"/>
     </application>
 
 </manifest>
