--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.freightcrayt">
 
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature
         android:name="android.hardware.camera.autofocus"
         android:required="false" />
@@ -17,6 +18,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FreightCrayt">
+        <activity
+            android:name=".Analytics"
+            android:exported="false" />
         <activity
             android:name=".activities.ViewItem"
             android:exported="false" />
@@ -57,7 +61,7 @@
             android:exported="false" />
         <activity
             android:name=".activities.AddItem"
-            android:exported="false"/>
+            android:exported="false" />
     </application>
 
 </manifest>
