:ambulance: Add analytics to AndroidManifest
not broekn no more, jjust need rebase

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,9 @@
         <activity
             android:name=".activities.AddItem"
             android:exported="false" />
+        <activity
+            android:name=".activities.Analytics"
+            android:exported="false"/>
     </application>
 
 </manifest>
