--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:20.0.5'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.dOctorWild:MPAndroidChart:v3.1.0'
+    implementation 'com.google.firebase:firebase-storage:20.0.1'
+    implementation 'com.squareup.picasso:picasso:2.8'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
